--- a/git_github.html
+++ b/git_github.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -29,32 +29,6 @@
     </style>
 </head>
 <body>
-    <nav class="navbar-neon navbar navbar-expand-lg sticky-top">
-        <div class="container">
-            <a class="neon-text" href="index.html" target="_blank" rel="noopener noreferrer"><i class="bi bi-house-door"></i> SOURCE-IT</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" style="border-color: #00ff88;">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto align-items-center">
-                    <li class="nav-item"><a class="nav-link-neon" href="guia_redes.html" target="_blank" rel="noopener noreferrer">Redes</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="linux_cheatsheet.html" target="_blank" rel="noopener noreferrer">Linux</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="virtualbox.html" target="_blank" rel="noopener noreferrer">VirtualBox</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="conversor_binario_hexadecimal.html" target="_blank" rel="noopener noreferrer">Conversor</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="MySQL.html" target="_blank" rel="noopener noreferrer">MySQL</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="dhcp_dns.html" target="_blank" rel="noopener noreferrer">DHCP/DNS</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="lenguajes_de_marcas.html" target="_blank" rel="noopener noreferrer">Lenguajes</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="Css_basico.html" target="_blank" rel="noopener noreferrer">CSS Básico</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="Js_basico.html" target="_blank" rel="noopener noreferrer">JavaScript</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="hacking_etico.html" target="_blank" rel="noopener noreferrer">Hacking Ético</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="ia_lanzadera.html" target="_blank" rel="noopener noreferrer">IA</a></li>
-                    <li class="nav-item"><a class="nav-link-neon active" href="git_github.html" target="_blank" rel="noopener noreferrer">Git/GitHub</a></li>
-                    <li class="nav-item ms-3"><button id="themeToggle" class="theme-btn btn" title="Cambiar tema"><i class="bi bi-palette-fill"></i></button></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
     <div class="hero text-center">
         <h1 class="display-5 fw-bold"><i class="bi bi-git"></i> Git y GitHub</h1>
         <p class="lead">Página práctica para instalar, aprender flujo de trabajo y descubrir repos interesantes.</p>
@@ -67,7 +41,7 @@
                     <h4><i class="bi bi-download"></i> Descargar Git</h4>
                     <p class="git-meta">Control de versiones local</p>
                     <p>Git permite versionar tu proyecto, crear ramas y colaborar sin perder historial.</p>
-                    <a class="btn btn-outline-primary" href="https://git-scm.com/downloads" target="_blank" rel="noopener noreferrer">Descargar Git</a>
+                    <a class="btn btn-outline-primary" href="https://git-scm.com/downloads">Descargar Git</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -75,7 +49,7 @@
                     <h4><i class="bi bi-window"></i> GitHub Desktop</h4>
                     <p class="git-meta">Interfaz gráfica oficial</p>
                     <p>Cliente visual para commits, ramas, conflictos y pull requests sin usar terminal.</p>
-                    <a class="btn btn-outline-primary" href="https://desktop.github.com/download/" target="_blank" rel="noopener noreferrer">Descargar Desktop</a>
+                    <a class="btn btn-outline-primary" href="https://desktop.github.com/download/">Descargar Desktop</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -83,7 +57,7 @@
                     <h4><i class="bi bi-terminal"></i> GitHub CLI (gh)</h4>
                     <p class="git-meta">Automatización y flujo en terminal</p>
                     <p>Gestiona issues, PRs, repos y acciones desde la consola.</p>
-                    <a class="btn btn-outline-primary" href="https://cli.github.com/" target="_blank" rel="noopener noreferrer">Instalar gh</a>
+                    <a class="btn btn-outline-primary" href="https://cli.github.com/">Instalar gh</a>
                 </div>
             </div>
         </div>
@@ -119,32 +93,32 @@ git push -u origin feature/login</div>
                 <div class="git-repo">
                     <strong>freeCodeCamp/freeCodeCamp</strong><br>
                     Aprende desarrollo full-stack con ejercicios y proyectos reales.<br>
-                    <a href="https://github.com/freeCodeCamp/freeCodeCamp" target="_blank" rel="noopener noreferrer">Abrir repositorio</a>
+                    <a href="https://github.com/freeCodeCamp/freeCodeCamp">Abrir repositorio</a>
                 </div>
                 <div class="git-repo">
                     <strong>public-apis/public-apis</strong><br>
                     Listado enorme de APIs públicas para practicar integraciones.<br>
-                    <a href="https://github.com/public-apis/public-apis" target="_blank" rel="noopener noreferrer">Abrir repositorio</a>
+                    <a href="https://github.com/public-apis/public-apis">Abrir repositorio</a>
                 </div>
                 <div class="git-repo">
                     <strong>sindresorhus/awesome</strong><br>
                     Índice de listas "awesome" para casi cualquier tecnología.<br>
-                    <a href="https://github.com/sindresorhus/awesome" target="_blank" rel="noopener noreferrer">Abrir repositorio</a>
+                    <a href="https://github.com/sindresorhus/awesome">Abrir repositorio</a>
                 </div>
                 <div class="git-repo">
                     <strong>EbookFoundation/free-programming-books</strong><br>
                     Libros de programación gratuitos en múltiples idiomas.<br>
-                    <a href="https://github.com/EbookFoundation/free-programming-books" target="_blank" rel="noopener noreferrer">Abrir repositorio</a>
+                    <a href="https://github.com/EbookFoundation/free-programming-books">Abrir repositorio</a>
                 </div>
                 <div class="git-repo">
                     <strong>firstcontributions/first-contributions</strong><br>
                     Proyecto ideal para hacer tu primera contribución open source.<br>
-                    <a href="https://github.com/firstcontributions/first-contributions" target="_blank" rel="noopener noreferrer">Abrir repositorio</a>
+                    <a href="https://github.com/firstcontributions/first-contributions">Abrir repositorio</a>
                 </div>
                 <div class="git-repo mb-0">
                     <strong>git/git</strong><br>
                     Código fuente oficial de Git (nivel avanzado).<br>
-                    <a href="https://github.com/git/git" target="_blank" rel="noopener noreferrer">Abrir repositorio</a>
+                    <a href="https://github.com/git/git">Abrir repositorio</a>
                 </div>
             </div>
         </div>
@@ -155,21 +129,21 @@ git push -u origin feature/login</div>
                 <div class="git-card p-3">
                     <h5>Trending</h5>
                     <p>Descubre qué repos están en tendencia.</p>
-                    <a class="btn btn-outline-primary" href="https://github.com/trending" target="_blank" rel="noopener noreferrer">Ir a Trending</a>
+                    <a class="btn btn-outline-primary" href="https://github.com/trending">Ir a Trending</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="git-card p-3">
                     <h5>Topics</h5>
                     <p>Explora por áreas: IA, seguridad, frontend, devops, etc.</p>
-                    <a class="btn btn-outline-primary" href="https://github.com/topics" target="_blank" rel="noopener noreferrer">Ir a Topics</a>
+                    <a class="btn btn-outline-primary" href="https://github.com/topics">Ir a Topics</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="git-card p-3">
                     <h5>GitHub Skills</h5>
                     <p>Laboratorios interactivos para Git y flujo de PR.</p>
-                    <a class="btn btn-outline-primary" href="https://skills.github.com/" target="_blank" rel="noopener noreferrer">Ir a Skills</a>
+                    <a class="btn btn-outline-primary" href="https://skills.github.com/">Ir a Skills</a>
                 </div>
             </div>
         </div>
@@ -178,10 +152,6 @@ git push -u origin feature/login</div>
             <strong>Contáctame:</strong> <a href="mailto:jesustelefonico@gmail.com">jesustelefonico@gmail.com</a>
         </div>
     </div>
-
-    <footer class="bg-dark text-white text-center py-4 mt-5">
-        <p class="mb-0">Made by Jemarin Source-IT</p>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/site-sfx.js"></script>
