--- a/lenguajes_de_marcas.html
+++ b/lenguajes_de_marcas.html
@@ -16,34 +16,6 @@
     <!-- Animacion Mr. Robot (se desvanece tras 15s) -->
     <div id="mr-robot-glitch">Hello, friend</div>
     <!-- Navbar Neón (idéntico al de las demás páginas) -->
-    <nav class="navbar-neon navbar navbar-expand-lg sticky-top">
-        <div class="container">
-            <a class="neon-text" href="index.html" target="_blank" rel="noopener noreferrer"><i class="bi bi-house-door"></i> SOURCE-IT</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" style="border-color: #00ff88;">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto align-items-center">                    <li class="nav-item"><a class="nav-link-neon" href="guia_redes.html" target="_blank" rel="noopener noreferrer">Redes</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="linux_cheatsheet.html" target="_blank" rel="noopener noreferrer">Linux</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="virtualbox.html" target="_blank" rel="noopener noreferrer">VirtualBox</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="conversor_binario_hexadecimal.html" target="_blank" rel="noopener noreferrer">Conversor</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="MySQL.html" target="_blank" rel="noopener noreferrer">MySQL</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="dhcp_dns.html" target="_blank" rel="noopener noreferrer">DHCP/DNS</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="lenguajes_de_marcas.html" target="_blank" rel="noopener noreferrer">Lenguajes</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="Css_basico.html" target="_blank" rel="noopener noreferrer">CSS Básico</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="Js_basico.html" target="_blank" rel="noopener noreferrer">JavaScript</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="freeplane.html" target="_blank" rel="noopener noreferrer">Freeplane</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="hacking_etico.html" target="_blank" rel="noopener noreferrer">Hacking Ético</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="ia_lanzadera.html" target="_blank" rel="noopener noreferrer">IA</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="git_github.html" target="_blank" rel="noopener noreferrer">Git/GitHub</a></li>
-                    <!-- Nuevo enlace a Lenguajes de Marcas (opcional, puedes añadirlo si deseas) -->
-                    <!-- <li class="nav-item"><a class="nav-link-neon" href="lenguajes_marcas.html" target="_blank" rel="noopener noreferrer">Lenguajes</a></li> -->
-                    <li class="nav-item ms-3"><button id="themeToggle" class="theme-btn btn" title="Cambiar tema"><i class="bi bi-palette-fill"></i></button></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
     <!-- Hero -->
     <div class="hero text-center">
         <h1 class="display-4 fw-bold"><i class="bi bi-code-square"></i> Lenguajes de Marcas</h1>
@@ -210,7 +182,7 @@
         <h2 class="section-title" id="tecnologias"><i class="bi bi-gear"></i> Tecnologías relacionadas</h2>
         <div class="accordion" id="techAccordion">
             <div class="accordion-item">
-                <button class="accordion-header">📍 XPath (XML Path Language)</button>
+                <button class="accordion-header">🔎 XPath (XML Path Language)</button>
                 <div class="accordion-content">
                     <p>Lenguaje para navegar y seleccionar nodos en un documento XML. Se usa en XSLT y XQuery.</p>
                     <div class="code-block">
@@ -221,7 +193,7 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <button class="accordion-header">🔍 XQuery (XML Query Language)</button>
+                <button class="accordion-header">🧠 XQuery (XML Query Language)</button>
                 <div class="accordion-content">
                     <p>Lenguaje de consulta funcional para XML, similar a SQL. Estructura FLWOR (For, Let, Where, Order by, Return).</p>
                     <div class="code-block">
@@ -233,7 +205,7 @@ return &lt;libro&gt;{$libro/titulo}&lt;/libro&gt;
                 </div>
             </div>
             <div class="accordion-item">
-                <button class="accordion-header">🔄 XSLT (XML Stylesheet Language Transformations)</button>
+                <button class="accordion-header">🎨 XSLT (XML Stylesheet Language Transformations)</button>
                 <div class="accordion-content">
                     <p>Transforma documentos XML a otros formatos (HTML, texto, XML diferente). Usa plantillas.</p>
                     <div class="code-block">
@@ -354,7 +326,7 @@ W3C + WHATWG: evolución del estándar vivo
                 <div class="accordion-content">
                     <p>La etiqueta <code>&lt;a&gt;</code> conecta recursos internos y externos. Usa textos de enlace significativos para accesibilidad.</p>
                     <div class="code-block">
-&lt;a href="https://developer.mozilla.org" target="_blank" rel="noopener noreferrer"&gt;
+&lt;a href="https://developer.mozilla.org"&gt;
   Referencia técnica
 &lt;/a&gt;
                     </div>
@@ -530,10 +502,6 @@ Checklist de entrega:
             </div>
         </div>
     </div>
-
-    <footer>
-        <p>Created by Jemarin Birt LH ASIR 2025 ^^</p>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
