--- a/linux_cheatsheet.html
+++ b/linux_cheatsheet.html
@@ -14,37 +14,11 @@
 </head>
 <body>
     <div class="linux-penguin-intro" aria-hidden="true">
-        <div class="linux-penguin-char">🐧</div>
+        <div class="linux-penguin-char">&#128039;</div>
         <div class="linux-penguin-bubble">tira windows a la mierda!</div>
     </div>
 
     <!-- Navbar Neón -->
-    <nav class="navbar-neon navbar navbar-expand-lg sticky-top">
-        <div class="container">
-            <a class="neon-text" href="index.html" target="_blank" rel="noopener noreferrer"><i class="bi bi-house-door"></i> SOURCE-IT</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" style="border-color: #00ff88;">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto align-items-center">                    <li class="nav-item"><a class="nav-link-neon" href="guia_redes.html" target="_blank" rel="noopener noreferrer">Redes</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="linux_cheatsheet.html" target="_blank" rel="noopener noreferrer">Linux</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="virtualbox.html" target="_blank" rel="noopener noreferrer">VirtualBox</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="conversor_binario_hexadecimal.html" target="_blank" rel="noopener noreferrer">Conversor</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="MySQL.html" target="_blank" rel="noopener noreferrer">MySQL</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="dhcp_dns.html" target="_blank" rel="noopener noreferrer">DHCP/DNS</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="lenguajes_de_marcas.html" target="_blank" rel="noopener noreferrer">Lenguajes</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="Css_basico.html" target="_blank" rel="noopener noreferrer">CSS Básico</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="Js_basico.html" target="_blank" rel="noopener noreferrer">JavaScript</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="freeplane.html" target="_blank" rel="noopener noreferrer">Freeplane</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="hacking_etico.html" target="_blank" rel="noopener noreferrer">Hacking Ético</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="ia_lanzadera.html" target="_blank" rel="noopener noreferrer">IA</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="git_github.html" target="_blank" rel="noopener noreferrer">Git/GitHub</a></li>
-                    <li class="nav-item ms-3"><button id="themeToggle" class="theme-btn btn" title="Cambiar tema"><i class="bi bi-palette-fill"></i></button></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
     <div class="hero text-center">
         <h1 class="display-4 fw-bold"><i class="bi bi-terminal"></i> Linux Cheatsheet</h1>
         <p class="lead">Comandos esenciales, shell, permisos, expresiones regulares y más.</p>
@@ -54,7 +28,7 @@
         <!-- Aviso: redirección a guía de redes -->
         <div class="alert alert-info d-flex align-items-center" role="alert">
             <i class="bi bi-info-circle-fill me-2 fs-4"></i>
-            <div>Para temas de <strong>redes (subnetting, DHCP, DNS)</strong> visita la <a href="guia_redes.html" class="alert-link" target="_blank" rel="noopener noreferrer">Guía de Redes</a>.</div>
+            <div>Para temas de <strong>redes (subnetting, DHCP, DNS)</strong> visita la <a href="guia_redes.html" class="alert-link">Guía de Redes</a>.</div>
         </div>
 
         <!-- Navegación y archivos -->
@@ -356,10 +330,6 @@ find /ruta -name "*.log" | xargs rm
             <i class="bi bi-lightbulb"></i> Para usar expresiones extendidas en grep: <code>grep -E</code> o <code>egrep</code>.
         </div>
     </div>
-
-    <footer>
-        <p>Created by Jemarin Birt LH ASIR 2025 ^^</p>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
