--- a/MySQL.html
+++ b/MySQL.html
@@ -14,32 +14,6 @@
 </head>
 <body>
     <!-- Navbar Neón -->
-    <nav class="navbar-neon navbar navbar-expand-lg sticky-top">
-        <div class="container">
-            <a class="neon-text" href="index.html" target="_blank" rel="noopener noreferrer"><i class="bi bi-house-door"></i> SOURCE-IT</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" style="border-color: #00ff88;">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto align-items-center">                    <li class="nav-item"><a class="nav-link-neon" href="guia_redes.html" target="_blank" rel="noopener noreferrer">Redes</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="linux_cheatsheet.html" target="_blank" rel="noopener noreferrer">Linux</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="virtualbox.html" target="_blank" rel="noopener noreferrer">VirtualBox</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="conversor_binario_hexadecimal.html" target="_blank" rel="noopener noreferrer">Conversor</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="MySQL.html" target="_blank" rel="noopener noreferrer">MySQL</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="dhcp_dns.html" target="_blank" rel="noopener noreferrer">DHCP/DNS</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="lenguajes_de_marcas.html" target="_blank" rel="noopener noreferrer">Lenguajes</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="Css_basico.html" target="_blank" rel="noopener noreferrer">CSS Básico</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="Js_basico.html" target="_blank" rel="noopener noreferrer">JavaScript</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="freeplane.html" target="_blank" rel="noopener noreferrer">Freeplane</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="hacking_etico.html" target="_blank" rel="noopener noreferrer">Hacking Ético</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="ia_lanzadera.html" target="_blank" rel="noopener noreferrer">IA</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="git_github.html" target="_blank" rel="noopener noreferrer">Git/GitHub</a></li>
-                    <li class="nav-item ms-3"><button id="themeToggle" class="theme-btn btn" title="Cambiar tema"><i class="bi bi-palette-fill"></i></button></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
     <!-- Hero -->
     <div class="hero text-center">
         <h1 class="display-4 fw-bold"><i class="bi bi-database-gear"></i> Guía de MySQL</h1>
@@ -67,7 +41,7 @@
         </div>
 
         <!-- 1. Creación de usuarios -->
-        <h2 class="section-title" id="usuarios">👥 1. Creación de usuarios</h2>
+        <h2 class="section-title" id="usuarios">🔐 1. Creación de usuarios</h2>
         <div class="card-custom">
             <div class="card-header-custom"><i class="bi bi-person-fill-gear"></i> Usuario administrador (solo servidor)</div>
             <div class="card-body p-4">
@@ -88,7 +62,7 @@ FLUSH PRIVILEGES;</div>
         </div>
 
         <!-- 2. Vistas -->
-        <h2 class="section-title" id="vistas">👁️ 2. Vistas sobre la base de datos Jardineria</h2>
+        <h2 class="section-title" id="vistas">🧾 2. Vistas sobre la base de datos Jardineria</h2>
         <div class="card-custom">
             <div class="card-header-custom"><i class="bi bi-file-earmark-spreadsheet"></i> Crear vista combinando Pedidos y Clientes</div>
             <div class="card-body p-4">
@@ -106,8 +80,8 @@ FROM Pedidos p JOIN Clientes c ON p.CodigoCliente = c.CodigoCliente;</div>
 FLUSH PRIVILEGES;</div>
                 <div class="alert alert-info-custom alert-custom mt-3">
                     <strong>Comprobación desde el cliente:</strong><br>
-                    <code>SELECT * FROM vista_pedidos_clientes LIMIT 5;</code> → ✅ funciona.<br>
-                    <code>SELECT * FROM Clientes;</code> → ❌ error 1142 (comando denegado).
+                    <code>SELECT * FROM vista_pedidos_clientes LIMIT 5;</code> ? ? funciona.<br>
+                    <code>SELECT * FROM Clientes;</code> ? ? error 1142 (comando denegado).
                 </div>
             </div>
         </div>
@@ -139,7 +113,7 @@ FLUSH PRIVILEGES;</div>
         </div>
 
         <!-- 4. Privilegios a nivel de columna -->
-        <h2 class="section-title" id="columnas">🔬 4. Privilegios a nivel de columna</h2>
+        <h2 class="section-title" id="columnas">📊 4. Privilegios a nivel de columna</h2>
         <div class="card-custom">
             <div class="card-header-custom"><i class="bi bi-grip-vertical"></i> Uso de columns_priv</div>
             <div class="card-body p-4">
@@ -152,7 +126,7 @@ FLUSH PRIVILEGES;</div>
         </div>
 
         <!-- 5. Cheatsheet -->
-        <h2 class="section-title" id="cheatsheet">🚀 5. Cheatsheet de Comandos</h2>
+        <h2 class="section-title" id="cheatsheet">⚡ 5. Cheatsheet de Comandos</h2>
         <div class="card-custom">
             <div class="card-header-custom"><i class="bi bi-lightning-charge"></i> Comandos Esenciales de MySQL</div>
             <div class="card-body p-4">
@@ -170,7 +144,7 @@ FLUSH PRIVILEGES;</div>
         </div>
 
         <!-- 6. Buenas prácticas -->
-        <h2 class="section-title" id="buenas-practicas">🧠 6. Buenas prácticas en gestión de permisos</h2>
+        <h2 class="section-title" id="buenas-practicas">✅ 6. Buenas prácticas en gestión de permisos</h2>
         <div class="card-custom">
             <div class="card-header-custom"><i class="bi bi-check-circle"></i> Resumen de Seguridad</div>
             <div class="card-body p-4">
@@ -191,10 +165,10 @@ FLUSH PRIVILEGES;</div>
             <div class="card-header-custom"><i class="bi bi-book-half"></i> Fuentes Oficiales</div>
              <div class="card-body p-4">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="https://dev.mysql.com/doc/refman/8.0/en/grant.html" target="_blank">MySQL 8.0 Manual: GRANT Statement</a></li>
-                    <li class="list-group-item"><a href="https://dev.mysql.com/doc/refman/8.0/en/revoke.html" target="_blank">MySQL 8.0 Manual: REVOKE Statement</a></li>
-                    <li class="list-group-item"><a href="https://dev.mysql.com/doc/refman/8.0/en/create-view.html" target="_blank">MySQL 8.0 Manual: CREATE VIEW Statement</a></li>
-                    <li class="list-group-item"><a href="https://dev.mysql.com/doc/refman/8.0/en/privileges-provided.html" target="_blank">MySQL 8.0 Manual: Privileges Provided by MySQL</a></li>
+                    <li class="list-group-item"><a href="https://dev.mysql.com/doc/refman/8.0/en/grant.html">MySQL 8.0 Manual: GRANT Statement</a></li>
+                    <li class="list-group-item"><a href="https://dev.mysql.com/doc/refman/8.0/en/revoke.html">MySQL 8.0 Manual: REVOKE Statement</a></li>
+                    <li class="list-group-item"><a href="https://dev.mysql.com/doc/refman/8.0/en/create-view.html">MySQL 8.0 Manual: CREATE VIEW Statement</a></li>
+                    <li class="list-group-item"><a href="https://dev.mysql.com/doc/refman/8.0/en/privileges-provided.html">MySQL 8.0 Manual: Privileges Provided by MySQL</a></li>
                 </ul>
                 <div class="alert alert-warning-custom alert-custom mt-3">
                     📝 <strong>Nota:</strong> Todos los enlaces apuntan a la documentación oficial de MySQL y fueron verificados en Feb 2026.
@@ -203,10 +177,6 @@ FLUSH PRIVILEGES;</div>
         </div>
 
     </div>
-
-    <footer class="bg-dark text-white text-center py-4 mt-5">
-        <p>Created by Jemarin Birt LH ASIR 2025 ^^</p>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
